tdf#118747 sc: use manual height for previous rows in TransferObj

This can ensure, that visible area will not shift if autoheight
will change height of previous rows.

Change-Id: I66e013e9f3f27396f13b26fde37353cb63e47258
Reviewed-on: https://gerrit.libreoffice.org/62279
Tested-by: Jenkins
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>